--- a/templates/registro.html
+++ b/templates/registro.html
@@ -1,112 +1,164 @@
 {% extends 'layout.html' %}
 
-{% block title %}Tipo Usuario{% endblock %}
+{% block title %}Registro General{% endblock %}
 
 {% block body %}
-    <body class="bg-gradient-primary">
-      <div class="container">
-          <div class="card o-hidden border-0 shadow-lg my-5">
-              <div class="card-body p-0">
-                  <div class="row">
-                      <div class="col-lg-5 d-none d-lg-block bg-register-image"></div>
-                      <div class="col-lg-7">
-                          <div class="p-5">
-                              <div class="text-center">
-                                  <h1 class="h4 text-gray-900 mb-4">Registrate!</h1>
+<body class="bg-gradient-primary">
+  <div class="container">
+      <div class="card o-hidden border-0 shadow-lg my-5">
+          <div class="card-body p-0">
+              <div class="row">
+                  <div class="col-lg-5 d-none d-lg-block bg-register-image"></div>
+                  <div class="col-lg-7">
+                      <div class="p-5">
+                          <div class="text-center">
+                              <h1 class="h4 text-gray-900 mb-4">Registrate</h1>
+                          </div>
+                          <form class="user" id="registroForm" method="POST">
+                              <div class="form-group row">
+                                  <div class="col-sm-6 mb-3 mb-sm-0">
+                                      <input type="text" class="form-control form-control-user" data-prefix="pri-nombre" placeholder="Primer Nombre" required>
+                                  </div>
+                                  <div class="col-sm-6">
+                                    <input type="text" class="form-control form-control-user" data-prefix="seg-nombre" placeholder="Segundo Nombre">
+                                  </div>
                               </div>
-                              <!-- Cambiar esto a general -->
-                              <form class="user" action="{{ url_for('paciente.registro') }}" method="POST">
-                                  <div class="form-group row">
-                                      <div class="col-sm-6 mb-3 mb-sm-0">
-                                          <input type="text" class="form-control form-control-user" name="pac-pri-nombre"
-                                              placeholder="Primer Nombre">
-                                      </div>
-                                      <div class="col-sm-6">
-                                        <input type="text" class="form-control form-control-user" name="pac-seg-nombre"
-                                            placeholder="Segundo Nombre">
-                                      </div>
-                                  </div>
-                                  <div class="form-group row">
-                                    <div class="col-sm-6">
-                                      <input type="text" class="form-control form-control-user" name="pac-pri-apellido"
-                                          placeholder="Primer Apellido">
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <input type="text" class="form-control form-control-user" name="pac-seg-apellido"
-                                            placeholder="Segundo Apellido">
-                                    </div>
-                                  </div>
-                                  <div class="form-group">
-                                      <input type="email" class="form-control form-control-user" name="pac-correo"
-                                          placeholder="Correo Electronico">
-                                  </div>
-
-                                  <div class="form-group">
-                                    <label>Género</label>
-                                    <div requiere>
-                                    <label><input type="radio" name="pac-sexo" value="M">Hombre</label><br>
-                                    <label><input type="radio" name="pac-sexo" value="F">Mujer</label><br>
-                                    <label><input type="radio" name="pac-sexo" value="O">Prefiero no decirlo</label><br>
-                                    </div>
-                                  </div>
-
-                                  <div class="form-group">
-                                    <label>Tipo</label>
-                                    <div requiere>
-                                    <label><input type="radio" name="pac-tipo" value="M">Especialista</label><br>
-                                    <label><input type="radio" name="pac-tipo" value="F">Paciente</label><br>
-                                    </div>
-                                  </div>
-
-                                  <div class="form-group row">
-                                  <div class="col-sm-6">
-                                    <input type="number" class="form-control form-control-user" name="pac-telefono"
-                                        placeholder="Numero de Telefono">
-                                  </div>
-                                  <div class="col-sm-6">
-                                    <input type="date" class="form-control form-control-user" name="pac-fecha-nacimiento"
-                                        placeholder="Fecha de nacimiento">
-                                  </div>
+                              <div class="form-group row">
+                                <div class="col-sm-6">
+                                  <input type="text" class="form-control form-control-user" data-prefix="pri-apellido" placeholder="Primer Apellido" required>
                                 </div>
-
-                                  <!-- Agregar validacion para comprobar las 2 contraseñas -->
-                                  <div class="form-group row"> 
-                                      <div class="col-sm-6 mb-3 mb-sm-0">
-                                          <input type="password" class="form-control form-control-user"
-                                              name="exampleInputPassword" placeholder="Contraseña">
-                                      </div>
-                                      <div class="col-sm-6">
-                                          <input type="password" class="form-control form-control-user"
-                                              name="exampleRepeatPassword" placeholder="Repite la Contraseña">
-                                      </div>
-                                  </div>
-                                  <button type="submit" class="btn btn-primary btn-user btn-block">
-                                      Registrar Cuenta
-                                  </button>
-                                  <hr>
-                              </form>
-                              <div class="text-center">
-                                  <a class="small" href="{{ url_for('index.login') }}">Already have an account? Login!</a>
+                                <div class="col-sm-6">
+                                    <input type="text" class="form-control form-control-user" data-prefix="seg-apellido" placeholder="Segundo Apellido">
+                                </div>
                               </div>
+                              <div class="form-group">
+                                  <input type="email" class="form-control form-control-user" data-prefix="correo" placeholder="Correo Electronico" required>
+                              </div>
+
+                              <div class="form-group">
+                                <label>Género</label>
+                                <div>
+                                  <label>
+                                    <input type="radio" data-prefix="sexo" name="sexo" value="M" required>
+                                    Hombre
+                                  </label><br>
+                                  <label>
+                                    <input type="radio" data-prefix="sexo" name="sexo" value="F">
+                                    Mujer
+                                  </label><br>
+                                  <label>
+                                    <input type="radio" data-prefix="sexo" name="sexo" value="O">
+                                    Prefiero no decirlo
+                                  </label><br>
+                                </div>
+                              </div>                              
+
+                              <div class="form-group">
+                                <label>Tipo</label>
+                                <div>
+                                <label><input type="radio" name="tipo" value="especialista" required>Especialista</label><br>
+                                <label><input type="radio" name="tipo" value="paciente">Paciente</label><br>
+                                </div>
+                              </div>
+
+                              <!-- Campo específico para Especialista -->
+                              <div class="form-group" id="especialidadField" style="display: none;">
+                                  <input type="text" class="form-control form-control-user" id="especialidadInput" placeholder="Especialidad">
+                              </div>
+
+                              <div class="form-group row">
+                                <div class="col-sm-6">
+                                  <input type="number" class="form-control form-control-user" data-prefix="telefono" placeholder="Número de Teléfono" required>
+                                </div>
+                                <!-- Campo específico para Paciente -->
+                                <div class="col-sm-6" id="fechaNacimientoField" style="display: none;">
+                                  <input type="date" class="form-control form-control-user" id="fechaNacimientoInput" placeholder="Fecha de nacimiento">
+                                </div>
+                              </div>
+
+                              <div class="form-group row"> 
+                                  <div class="col-sm-6 mb-3 mb-sm-0">
+                                    <input type="password" class="form-control form-control-user" data-prefix="clave" placeholder="Contraseña" required>
+                                  </div>
+                                  <div class="col-sm-6">
+                                    <input type="password" class="form-control form-control-user" data-prefix="clave2" placeholder="Repite la Contraseña" required>
+                                  </div>
+                              </div>
+                              <button type="submit" class="btn btn-primary btn-user btn-block">
+                                  Registrar Cuenta
+                              </button>
+                              <hr>
+                          </form>
+                          <div class="text-center">
+                              <a class="small" href="{{ url_for('index.login') }}">Ya tienes una cuenta? Inicia Sesión</a>
                           </div>
                       </div>
                   </div>
               </div>
           </div>
-  
       </div>
-  
-      <!-- Bootstrap core JavaScript-->
-      <script src="vendor/jquery/jquery.min.js"></script>
-      <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  
-      <!-- Core plugin JavaScript-->
-      <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-  
-      <!-- Custom scripts for all pages-->
-      <script src="js/sb-admin-2.min.js"></script>
-  
-  </body>
+  </div>
+
+  <!-- Scripts -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script>
+      document.addEventListener('DOMContentLoaded', function() {
+          const tipoRadios = document.querySelectorAll('input[name="tipo"]');
+          const form = document.getElementById('registroForm');
+          const especialidadField = document.getElementById('especialidadField');
+          const especialidadInput = document.getElementById('especialidadInput');
+          const fechaNacimientoField = document.getElementById('fechaNacimientoField');
+          const fechaNacimientoInput = document.getElementById('fechaNacimientoInput');
+
+          function updateForm() {
+              const tipo = document.querySelector('input[name="tipo"]:checked').value;
+              const isEspecialista = tipo === 'especialista';
+
+              // Actualizar action del formulario
+              form.action = isEspecialista
+                ? "{{ url_for('especialista.registro') }}"
+                : "{{ url_for('paciente.registro') }}";
+
+              // Actualizar prefijos de los campos comunes
+              const prefix = isEspecialista ? 'esp-' : 'pac-';
+              document.querySelectorAll('[data-prefix]').forEach(input => {
+                  const field = input.getAttribute('data-prefix');
+                  input.name = prefix + field;
+              });
+
+              document.querySelectorAll('[data-prefix]').forEach(input => {
+                const field = input.getAttribute('data-prefix');
+                input.name = prefix + field;
+             });
 
 
+              // Manejar campos específicos
+              if (isEspecialista) {
+                  especialidadField.style.display = 'block';
+                  especialidadInput.name = 'esp-especialidad';
+                  especialidadInput.required = true;
+
+                  fechaNacimientoField.style.display = 'none';
+                  fechaNacimientoInput.removeAttribute('name');
+                  fechaNacimientoInput.required = false;
+              } else {
+                  fechaNacimientoField.style.display = 'block';
+                  fechaNacimientoInput.name = 'pac-fecha-nacimiento';
+                  fechaNacimientoInput.required = true;
+
+                  especialidadField.style.display = 'none';
+                  especialidadInput.removeAttribute('name');
+                  especialidadInput.required = false;
+              }
+          }
+
+          tipoRadios.forEach(radio => {
+              radio.addEventListener('change', updateForm);
+          });
+
+          // Inicializar
+          updateForm();
+      });
+  </script>
+</body>
 {% endblock %}
