--- a/templates/e_add_receta.html
+++ b/templates/e_add_receta.html
@@ -3,104 +3,247 @@
 {% block title %}Agregar Comida{% endblock %}
 
 {% block body %}
+<body id="page-top">
+    <div id="wrapper">
+        <!-- Sidebar -->
+        <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="{{url_for('especialista.inicio', id=get_esp.id_espe)}}">
+                <div class="sidebar-brand-icon">
+                    <img src="{{ url_for('static', filename='img/logo.png') }}" alt="Logo" style="width: 40px; height: 40px;">
+                </div>
+                <div class="sidebar-brand-text mx-3">Fundación Ayudate</div>
+            </a>
 
-<a href="{{ url_for('especialista.inicio', id=get_esp.id_espe) }}">Volver</a>
-<h1>Agregar Comida</h1>
+            <hr class="sidebar-divider my-0">
 
-<form action="{{ url_for('especialista.addFood', id_espe=get_esp.id_espe, id_pac=id_pac) }}" method="POST" class="form-control">
+            <li class="nav-item active">
+                <a class="nav-link" href="{{url_for('especialista.inicio', id=get_esp.id_espe)}}">
+                    <i class="fas fa-fw fa-tachometer-alt"></i>
+                    <span>Inicio</span></a>
+            </li>
 
-    <div class="form-group">
-        <div required>
-            <label><input type="radio" name="tipo-comida" value="D">Desayuno</label><br>
-            <label><input type="radio" name="tipo-comida" value="A">Almuerzo</label><br>
-            <label><input type="radio" name="tipo-comida" value="C">Cena</label><br>
-            <label><input type="radio" name="tipo-comida" value="M">Merienda</label><br>
+            <hr class="sidebar-divider">
+
+            <!-- <div class="sidebar-heading">
+                Acciones
+            </div>
+
+            <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('especialista.receipeList', id=get_esp.id_espe) }}">
+                    <i class="fas fa-fw fa-book-medical"></i>
+                    <span>Asignar Paciente</span></a>
+            </li> -->
+
+            <!-- <hr class="sidebar-divider d-none d-md-block"> -->
+
+            <div class="text-center d-none d-md-inline">
+                <button class="rounded-circle border-0" id="sidebarToggle"></button>
+            </div>
+        </ul>
+
+        <!-- Content Wrapper -->
+        <div id="content-wrapper" class="d-flex flex-column">
+            <!-- Main Content -->
+            <div id="content">
+                <!-- Topbar -->
+                <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
+                    <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
+                        <i class="fa fa-bars"></i>
+                    </button>
+
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item dropdown no-arrow">
+                            <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{get_esp.pri_nombre}} {{get_esp.pri_apellido}}</span>
+                                <img class="img-profile rounded-circle"
+                                    src="{{ url_for('static', filename='img/undraw_profile.svg') }}">
+                            </a>
+                            <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
+                                aria-labelledby="userDropdown">
+                                <a class="dropdown-item" href="{{ url_for('especialista.perfil', id=get_esp.id_espe)}}">
+                                    <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
+                                    Perfil
+                                </a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
+                                    <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
+                                    Cerrar Sesión
+                                </a>
+                            </div>
+                        </li>
+                    </ul>
+                </nav>
+
+                <!-- Contenido Principal -->
+                <div class="container-fluid">
+                    <div class="d-sm-flex align-items-center justify-content-between mb-4">
+                        <h1 class="h3 mb-0 text-gray-800">Agregar Nueva Comida</h1>
+                    </div>
+
+                    <div class="card shadow mb-4">
+                        <div class="card-header py-3">
+                            <h6 class="m-0 font-weight-bold text-primary">Formulario de Registro</h6>
+                        </div>
+                        <div class="card-body">
+                            <form action="{{ url_for('especialista.addFood', id_espe=get_esp.id_espe, id_pac=id_pac) }}" method="POST">
+                                <!-- Tipo de Comida -->
+                                <div class="form-group">
+                                    <label class="font-weight-bold">Tipo de Comida</label>
+                                    <div class="btn-group btn-group-toggle d-flex" data-toggle="buttons">
+                                        <label class="btn btn-outline-primary flex-fill">
+                                            <input type="radio" name="tipo-comida" value="D" required> Desayuno
+                                        </label>
+                                        <label class="btn btn-outline-success flex-fill">
+                                            <input type="radio" name="tipo-comida" value="A"> Almuerzo
+                                        </label>
+                                        <label class="btn btn-outline-warning flex-fill">
+                                            <input type="radio" name="tipo-comida" value="C"> Cena
+                                        </label>
+                                        <label class="btn btn-outline-info flex-fill">
+                                            <input type="radio" name="tipo-comida" value="M"> Merienda
+                                        </label>
+                                    </div>
+                                </div>
+
+                                <!-- Selección de Paciente -->
+                                <div class="form-group">
+                                    <label class="font-weight-bold">Paciente</label>
+                                    <select class="form-control" name="id-paciente" required>
+                                        <option value="">Seleccione un paciente</option>
+                                        {% for paciente in get_pac %}
+                                        <option value="{{ paciente.id_paciente }}">
+                                            {{ paciente.pri_nombre }} {{ paciente.pri_apellido }}
+                                        </option>
+                                        {% endfor %}
+                                    </select>
+                                </div>
+
+                                <!-- Selección de Alimentos -->
+                                <div class="form-group">
+                                    <label class="font-weight-bold">Alimentos</label>
+                                    <div class="input-group mb-3">
+                                        <select class="form-control" id="alimentos-select">
+                                            <option value="">Seleccione un alimento</option>
+                                            {% for alimento in get_ali %}
+                                            <option value="{{ alimento.id_alimento }}">
+                                                {{ alimento.nombre }}
+                                            </option>
+                                            {% endfor %}
+                                        </select>
+                                        <div class="input-group-append">
+                                            <button class="btn btn-outline-secondary" type="button" id="add-alimento">
+                                                <i class="fas fa-plus"></i> Agregar
+                                            </button>
+                                        </div>
+                                    </div>
+                                    <div id="selected-alimentos" class="mt-3">
+                                        {% for alimento in selected_alimentos %}
+                                        <span class="badge badge-pill badge-primary mr-2 mb-2">
+                                            {{ alimento.nombre }}
+                                            <input type="hidden" name="alimentos[]" value="{{ alimento.id_alimento }}">
+                                            <button type="button" class="close text-white" aria-label="Remove">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </span>
+                                        {% endfor %}
+                                    </div>
+                                </div>
+
+                                <!-- Fechas -->
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            <label class="font-weight-bold">Fecha Inicio</label>
+                                            <input type="datetime-local" class="form-control" id="fecha-ini" name="fecha-ini" required>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            <label class="font-weight-bold">Fecha Fin</label>
+                                            <input type="datetime-local" class="form-control" id="fecha-fin" name="fecha-fin" required>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <button type="submit" class="btn btn-primary btn-block">
+                                    <i class="fas fa-save mr-2"></i>Guardar Comida
+                                </button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Footer -->
+            <footer class="sticky-footer bg-white">
+                <div class="container my-auto">
+                    <div class="copyright text-center my-auto">
+                        <span>Copyright &copy; amparo & marian  2025</span>
+                    </div>
+                </div>
+            </footer>
         </div>
     </div>
 
-    <div class="form-group">
-        <label>Pacientes</label>
-        <select name="id-paciente">
-            <option value="">Selecciona el nombre</option>
-            {% for paciente in get_pac %}
-            <option value="{{ paciente.id_paciente }}">{{ paciente.pri_nombre }} {{ paciente.pri_apellido }}</option>
-            {% endfor %}
-        </select>
-    </div>
-
-    <!-- Alimentos -->
-    <div class="alimentos" id="alimentos">
-        <div class="row group">
-            <div class="column">
-                <div class="form-group">
-                    <label>Alimento</label>
-                    <select id="alimentos-select" name="alimentos[]">
-                        <option value="">Selecciona el nombre</option>
-                        {% for alimento in get_ali %}
-                        <option value="{{ alimento.id_alimento }}">{{ alimento.nombre }}</option>
-                        {% endfor %}
-                    </select>
-                    <button type="button" id="add-alimento">Agregar otro Alimento</button>
+    <!-- Logout Modal-->
+    <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">¿Listo para irte?</h5>
+                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">×</span>
+                    </button>
+                </div>
+                <div class="modal-body">Selecciona "Cerrar sesión" para finalizar tu sesión actual.</div>
+                <div class="modal-footer">
+                    <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancelar</button>
+                    <a class="btn btn-primary" href="{{ url_for('index.logout', id=get_esp.id_espe) }}">Cerrar sesión</a>
                 </div>
             </div>
         </div>
-        <ul id="selected-alimentos">
-            {% for alimento in selected_alimentos %}
-            <li data-id="{{ alimento.id_alimento }}">
-                {{ alimento.nombre }}
-                <input type="hidden" name="alimentos[]" value="{{ alimento.id_alimento }}">
-                <button type="button" class="remove-alimento">Eliminar</button>
-            </li>
-            {% endfor %}
-        </ul>
-    </div>
-    <!-- // -->
-
-    <div class="form-group">
-        <h2>Fecha inicio</h2>
-        <input type="datetime-local" id="fecha-ini" name="fecha-ini" required>
     </div>
 
-    <div class="form-group">
-        <h2>Fecha Fin</h2>
-        <input type="datetime-local" id="fecha-fin" name="fecha-fin" required>
-    </div>
+    <!-- Scripts -->
+    <script src="{{ url_for('static', filename='vendor/jquery/jquery.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='vendor/bootstrap/js/bootstrap.bundle.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/sb-admin-2.min.js') }}"></script>
 
-    <div class="button-container">
-        <button class="submit-btn" type="submit">Agregar Comida</button>
-    </div>
-</form>
+    <script>
+        // Manejo de alimentos
+        document.getElementById('add-alimento').addEventListener('click', function() {
+            const select = document.getElementById('alimentos-select');
+            const selectedOption = select.options[select.selectedIndex];
+            
+            if(selectedOption.value) {
+                const badge = document.createElement('span');
+                badge.className = 'badge badge-pill badge-primary mr-2 mb-2 d-inline-flex align-items-center';
+                
+                badge.innerHTML = `
+                    ${selectedOption.text}
+                    <input type="hidden" name="alimentos[]" value="${selectedOption.value}">
+                    <button type="button" class="close text-white ml-2" style="font-size: 1rem">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                `;
+                
+                badge.querySelector('button').addEventListener('click', function() {
+                    this.parentElement.remove();
+                });
+                
+                document.getElementById('selected-alimentos').appendChild(badge);
+                select.value = '';
+            }
+        });
 
-<!-- ZONA DE SCRIPTS -->
-<script>
-
-    // Para que funcione la entrada multiple de datos en alimento
-    document.getElementById('add-alimento').addEventListener('click', function () {
-        var select = document.getElementById('alimentos-select');
-        var selectedValue = select.value;
-        var selectedText = select.options[select.selectedIndex].text;
-
-        if (selectedValue) {
-            var ul = document.getElementById('selected-alimentos');
-            var li = document.createElement('li');
-            li.setAttribute('data-id', selectedValue);
-            li.innerHTML = selectedText + ' <input type="hidden" name="alimentos[]" value="' + selectedValue + '"> <button type="button" class="remove-alimento">Eliminar</button>';
-            ul.appendChild(li);
-
-            select.value = '';
-        } else {
-            alert("Por favor selecciona un alimento válido.");
-        }
-    });
-
-    document.getElementById('selected-alimentos').addEventListener('click', function (e) {
-        if (e.target && e.target.classList.contains('remove-alimento')) {
-            var li = e.target.parentElement;
-            li.parentElement.removeChild(li);
-        }
-    });
-    // //
-
-</script>
-<!-- // SCRIPTS -->
-{% endblock body %}
+        // Eliminar alimentos existentes
+        document.querySelectorAll('#selected-alimentos .close').forEach(btn => {
+            btn.addEventListener('click', function() {
+                this.closest('.badge').remove();
+            });
+        });
+    </script>
+</body>
+{% endblock %}
